# py_trading_lib

./: .gitignore  2  3  README.md  \  ]  pytest.ini  requirements.txt  setup.cfg
example_klines/: BNB_USDT.csv  BTC_USDT.csv  ETH_USDT.csv
example_scripts/: backtesting.py
py_trading_lib/: __init__.py
py_trading_lib/analysis/: __init__.py  analysis.py  conditions.py  handler.py  signals.py  technical_indicators.py
py_trading_lib/data_handler/: __init__.py  historic_data.py
py_trading_lib/orders/: __init__.py  allocation.py  coin.py  orders.py  status.py  strategy.py
py_trading_lib/system/: state.py  strategy.py
py_trading_lib/utils/: __init__.py  sanity_checks.py  utils.py
tests/: conftest.py
tests/analysis/: test_analysis.py  test_conditions.py  test_handler.py  test_signals.py  test_technical_indicators.py
tests/data_handler/: broken_data.csv  missing_data.csv  test_historic_data.py
tests/orders/: test_coin.py  test_orders.py  test_strategy.py
tests/system/: test_strategy.py
tests/utils/: sanity_checks.py  test_sanity_checks.py  test_utils.py
