[metadata]
name = py_trading_lib
version = 1.0
author = Michael Obernhumer
author_email = michaelobernhumer@gmail.com
description = A library for creating crypto trading bots.
long_description_content_type = text/markdown
url = https://github.com/ObernhumerMichael/py_trading_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = py_trading_lib
